[tool.poetry]
name = "hahabotgobrrrrrrrrr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
PyNaCl = "^1.4.0"
Flask = "^2.0.1"
topggpy = "^1.3.0"
python-decouple = "^3.4"
youtube_dl = "^2021.6.6"
discord-ext-slash = "^0.8.1"
discord-py-slash-command = "^3.0.1"
Cogs = "^0.4.4"
bs4 = "^0.0.1"
lxml = "^4.6.3"
Tokage = "^1.4"
env-file = "^2020.12.3"
praw = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
